--- a/pom.xml
+++ b/pom.xml
@@ -47,5 +47,17 @@
             <artifactId>cglib</artifactId>
             <version>2.1_3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.alibaba.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>3.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.rocketmq</groupId>
+            <artifactId>rocketmq-all</artifactId>
+            <version>3.0.10</version>
+            <type>pom</type>
+        </dependency>
   </dependencies>
 </project>
